# ekp-platform

./: .env.example  .gitignore  .python-version  README.md  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-05-24-ekp-mvp-development-plan.md
docs/superpowers/specs/: 2026-05-24-ekp-enterprise-knowledge-platform-design.md
src/ekp_platform/: __init__.py  cli.py
src/ekp_platform/core/: platform.py
tests/: __init__.py  test_platform.py
