[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ekp-platform"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" }
]
description = "EKP - Enterprise Knowledge Platform, 企业级知识中台"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  # 核心依赖会在这里列出，例如:
  # "pandas>=2.0.0",
  # "openpyxl>=3.1.0",
  # "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "black>=23.0.0",
  "flake8>=6.0.0",
  "mypy>=1.0.0",
  "ipython>=8.0.0",
]

[project.scripts]
ekp = "ekp_platform.cli:main"
